[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/02_Actors/_Actor.gd" type="Script" id=1]

[sub_resource type="AnimationNodeStateMachine" id=1]

[sub_resource type="AnimationNodeStateMachinePlayback" id=2]

[node name="Actor" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="ActorFSM" type="Node2D" parent="."]

[node name="Facing" type="Node2D" parent="."]

[node name="WallDetectors" type="Node2D" parent="Facing"]

[node name="GroundDetectors" type="Node2D" parent="Facing"]

[node name="AnimationPlayers" type="Node2D" parent="."]

[node name="SpritePlayer" type="AnimationPlayer" parent="AnimationPlayers"]

[node name="EffectsPlayer" type="AnimationPlayer" parent="AnimationPlayers"]

[node name="AnimationTree" type="AnimationTree" parent="AnimationPlayers"]
tree_root = SubResource( 1 )
anim_player = NodePath("../SpritePlayer")
parameters/playback = SubResource( 2 )
